# probe-plotter

./: LICENSE-MIT  README.md
.github/workflows/: example.yml  macros.yml  probe-plotter-tools.yml  probe-plotter.yml
examples/simple/: Cargo.toml  runner.rs
examples/simple/.cargo/: config.toml
examples/simple/src/: main.rs
macros/: Cargo.toml
macros/src/: args.rs  cargo.rs  lib.rs  metric.rs  metric_from_address.rs  metric_from_base_with_offset.rs  ptr.rs  setting.rs  symbol.rs
probe-plotter/: Cargo.toml
probe-plotter-common/: Cargo.toml
probe-plotter-common/src/: lib.rs  symbol.rs
probe-plotter-host/: Cargo.toml
probe-plotter-host/src/: main.rs
probe-plotter-tools/: Cargo.toml
probe-plotter-tools/src/: graph.rs  gui.rs  lib.rs  main.rs  metric.rs  setting.rs  symbol.rs
probe-plotter/src/: bar.rs  foo.rs  lib.rs  metric.rs  metric_from_address.rs  metric_from_address_with_offset.rs  setting.rs
