[package]
name = "probe-plotter-tools"
version = "0.1.0"
edition = "2024"
publish = ["gitea"]

[dependencies]
defmt = "1.0.1"
goblin = "0.10.0"
object = "0.37.1"
probe-rs = "0.29.1"
rerun = {  version = "0.24.0", default-features = false, features = [
  "native_viewer",
  "sdk",
  "server",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
# mimalloc is a much faster allocator:
mimalloc = "0.1.43"
shunting = "0.1.2"